# avans-linal

./: CMakeLists.txt  README.md  main.cpp
Libraries/SDL/src/main/windows/: version.rc
Math/: Line.cpp  Line.h  Matrix.cpp  Matrix.h  Vector.h  Vector3.cpp  Vector3.h
Objects/: AABB.cpp  AABB.h  Bullet.cpp  Bullet.h  Camera.cpp  Camera.h  Enemy.cpp  Enemy.h  SpaceShip.cpp  SpaceShip.h  Transform.cpp  Transform.h
Testing/: CMakeLists.txt  Example.cpp  MatrixTests.cpp
